# workshop_dw

./: Catálogo de produto - OK.xlsx  README.md  pyproject.toml
backend/: start.py
backend/contracts/: schema.py
backend/datasource/: api.py
backend/fakeapi/: products.csv  start.py
frontend/: main.py
frontend/aws/: client.py
frontend/contract/: catalogo.py
frontend/datasource/: csv.py
