[tool.poetry]
name = "workshop-dw"
version = "0.1.0"
description = ""
authors = ["Guilherme <gui.santos.sa@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.7"
uvicorn = "^0.34.0"
faker = "^35.0.0"
pandas = "^2.2.3"
requests = "^2.32.3"
boto3 = "^1.36.4"
pyarrow = "^19.0.0"
python-dotenv = "^1.0.1"
schedule = "^1.2.2"
streamlit = "^1.41.1"
openpyxl = "^3.1.5"
pydantic = {extras = ["email"], version = "^2.10.6"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
